# strongmock

./: README.md  pyproject.toml
experiments/: a.py  b.py  experiments.py
src/: __init__.py
strongmock.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: experiments.py  fnsource.py  test_full.py
