[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "strongmock"
version = "0.0.1"
authors = [
  { name="Arrman Anicket Saha", email="arrmansa99+430@gmail.com" },
]
description = "StrongMock is a powerful mocking library for Python that leverages low-level ctypes functionality to provide extensive mocking capabilities. Some care may be needed while using this."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/arrmansa/strongmock"
"Bug Tracker" = "https://github.com/arrmansa/strongmock/issues"
